параметры файла params.ini применяются глобально

--- a/params.ini
+++ b/params.ini
@@ -11,3 +11,6 @@ vhosts_section_id=Vagrant hosts
 [guest_params]
 ; IP address of the guest machine in the virtual network
 server_ip=192.168.2.10
+
+;Machine memory in Mib
+memory=2048
