обновлена справочная информация

--- a/params.ini
+++ b/params.ini
@@ -4,13 +4,14 @@
 www_dir.win32=D:\htdocs
 www_dir.unix=/var/www
 
-;Id of the section in /etc/hosts which contains our virtual hosts
+; Id of the section in /etc/hosts which contains our virtual hosts
 vhosts_section_id=Vagrant hosts
 
 
 [guest_params]
 ; IP address of the guest machine in the virtual network
+; if you change this option, you need to execute `vagrant provision`
 server_ip=192.168.2.10
 
-;Machine memory in Mib
+; Machine memory in Mib
 memory=2048
