box вынесен в params.ini

--- a/params.ini
+++ b/params.ini
@@ -9,6 +9,10 @@ vhosts_section_id=Vagrant hosts
 
 
 [guest_params]
+; Vagrant box settings
+box=debian-7.2.0
+box_url=https://dl.dropboxusercontent.com/u/197673519/debian-7.2.0.box
+
 ; IP address of the guest machine in the virtual network
 ; if you change this option, you need to execute `vagrant provision`
 server_ip=192.168.2.10
