изменен способ конфигурирования виртуальных хостов Apache

--- a/params.ini
+++ b/params.ini
@@ -13,7 +13,7 @@ box=debian-7.2.0
 box_url=https://dl.dropboxusercontent.com/u/197673519/debian-7.2.0.box
 
 ; IP address of the guest machine in the virtual network
-; if you change this option, you need to execute `vagrant provision`
+; if you change this option, you need to execute PatchHosts
 server_ip=192.168.2.10
 
 ; Machine memory in Mib
