настроен почтовый сервер

--- a/params.ini
+++ b/params.ini
@@ -12,9 +12,18 @@ vhosts_section_id=Vagrant hosts
 box=debian-7.2.0
 box_url=https://dl.dropboxusercontent.com/u/197673519/debian-7.2.0.box
 
-; IP address of the guest machine in the virtual network
-; if you change this option, you need to execute PatchHosts
-server_ip=192.168.2.10
-
 ; Machine memory in Mib
 memory=2048
+
+; IP address of the guest machine in the virtual network
+; if you change this option, you need to execute PatchHosts and vagrant provision
+server_ip=192.168.2.10
+
+; SMTP server to send emails
+; if you change this option, you need to execute vagrant provision
+use_smtp=0
+smtp_host=smtp.mail.ru
+smtp_port=465
+smtp_user=test@mail.ru
+smtp_password=
+smtp_sender=test@mail.ru
