--- a/provision/data/exim4/satelite/update-exim4.conf.conf
+++ b/provision/data/exim4/satelite/update-exim4.conf.conf
@@ -16,17 +16,16 @@
 #
 # This is a Debian specific file
 
-dc_eximconfig_configtype='internet'
-dc_other_hostnames='debian-7.2.0'
-dc_local_interfaces='127.0.0.1 ; ::1'
+dc_eximconfig_configtype='satellite'
+dc_other_hostnames='localhost'
+dc_local_interfaces=''
 dc_readhost=''
 dc_relay_domains=''
 dc_minimaldns='false'
 dc_relay_nets=''
-dc_smarthost=''
+dc_smarthost='{{host}}:{{port}}'
 CFILEMODE='644'
 dc_use_split_config='false'
-dc_hide_mailname=''
+dc_hide_mailname='true'
 dc_mailname_in_oh='true'
 dc_localdelivery='mail_spool'
-
