изменена директория www для unix-like систем

--- a/params.ini
+++ b/params.ini
@@ -2,7 +2,7 @@
 ; Www directory on the host machine, mounted like /var/www in the guest OS
 ; Defaults: "d:\htdocs" for Windows and "/var/www" for Unix-like systems
 www_dir.win32=D:\htdocs
-www_dir.unix=/var/www
+www_dir.unix=~/htdocs
 
 ; Id of the section in /etc/hosts which contains our virtual hosts
 vhosts_section_id=Vagrant hosts
