--- a/params.ini
+++ b/params.ini
@@ -1,6 +1,6 @@
 [host_params]
 ; Www directory on the host machine, mounted like /var/www in the guest OS
-; Defaults: "d:\htdocs" for Windows and "/var/www" for Unix-like systems
+; Defaults: "d:\htdocs" for Windows and "~/htdocs" for Unix-like systems
 www_dir.win32=D:\htdocs
 www_dir.unix=~/htdocs
 
