--- a/params.ini
+++ b/params.ini
@@ -1,8 +1,7 @@
 [host_params]
 ; Www directory on the host machine, mounted like /var/www in the guest OS
-; Defaults: "d:\htdocs" for Windows and "~/htdocs" for Unix-like systems
-www_dir.win32=D:\htdocs
-www_dir.unix=~/htdocs
+; Defaults: "%Home%\htdocs" for Windows and "~/htdocs" for Unix-like systems
+www_dir=~/htdocs
 
 ; Id of the section in /etc/hosts which contains our virtual hosts
 vhosts_section_id=Vagrant hosts
