начат переход на свой бокс

--- a/params.ini
+++ b/params.ini
@@ -8,8 +8,8 @@ vhosts_section_id=Vagrant hosts
 
 [guest_params]
 ; Vagrant box settings
-box=debian-7.2.0
-box_url=https://dl.dropboxusercontent.com/u/197673519/debian-7.2.0.box
+box=VagrantWebdev
+box_url=
 
 ; Machine memory in Mib
 memory=2048
