установлена папка D:\htdocs

--- a/params.ini
+++ b/params.ini
@@ -1,7 +1,7 @@
 [host_params]
 ; Www directory on the host machine, mounted like /var/www in the guest OS
 ; Defaults: "%Home%\htdocs" for Windows and "~/htdocs" for Unix-like systems
-www_dir=~/htdocs
+www_dir=D:\htdocs
 
 ; Id of the section in /etc/hosts which contains our virtual hosts
 vhosts_section_id=Vagrant hosts
