добавлен URL box'а

--- a/params.ini
+++ b/params.ini
@@ -9,7 +9,7 @@ vhosts_section_id=Vagrant hosts
 [guest_params]
 ; Vagrant box settings
 box=VagrantWebdev
-box_url=
+box_url=http://static.fresh-team.ru/vagrant/vagrant-webdev.box
 
 ; Machine memory in Mib
 memory=2048
