установлен box из списка базовых боксов

--- a/params.ini
+++ b/params.ini
@@ -1,7 +1,7 @@
 [host_params]
 ; Www directory on the host machine, mounted like /var/www in the guest OS
 ; Defaults: "%Home%\htdocs" for Windows and "~/htdocs" for Unix-like systems
-www_dir=D:\htdocs
+www_dir=~/htdocs
 
 ; Id of the section in /etc/hosts which contains our virtual hosts
 vhosts_section_id=Vagrant hosts
@@ -9,7 +9,7 @@ vhosts_section_id=Vagrant hosts
 [guest_params]
 ; Vagrant box settings
 box=VagrantWebdev
-box_url=http://static.fresh-team.ru/vagrant/vagrant-webdev.box
+box_url=https://dl.dropboxusercontent.com/u/197673519/debian-7.2.0.box
 
 ; Machine memory in Mib
 memory=2048
