доработаны параметры Postgres

--- a/provision/data/postgres/pg_hba.conf
+++ b/provision/data/postgres/pg_hba.conf
@@ -82,19 +82,19 @@
 # maintenance (custom daily cronjobs, replication, and similar tasks).
 #
 # Database administrative login by Unix domain socket
-local    all    postgres    password
+local	all	postgres	trust
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-local    all    all    password
+local	all	all	trust
 
 # IPv4 local connections:
-host    all    all    127.0.0.1/32    trust
-host    all    all    192.168.0.0/16    trust
+host	all	all	127.0.0.1/32	password
+host	all	all	192.168.0.0/16	password
 
 # IPv6 local connections:
-host    all    all    ::1/128    trust
+host	all	all	::1/128	password
 # Allow replication connections from localhost, by a user with the
 # replication privilege.
 #local   replication     postgres                                peer
