--- a/provision/data/sphinxsearch/sphinx.conf
+++ b/provision/data/sphinxsearch/sphinx.conf
@@ -16,7 +16,7 @@
 function readConfDirectory($directory) {
     $dir = new \DirectoryIterator(__DIR__.'/'.$directory);
     foreach ($dir as $fileInfo) {
-        if ($fileInfo->isFile() && !$fileInfo->isDot())
+        if ($fileInfo->isFile() && !$fileInfo->isDot() && preg_match('#\.conf$#', $fileInfo->getFilename()))
              require $fileInfo->getPathName();
     }
 }
@@ -290,11 +290,5 @@ searchd
     # optional, values are 0 and 1, default is 1 (watchdog on)
     #
     # watchdog = 1
-
-    
-    # SphinxQL compatibility mode (legacy columns and their names)
-    # optional, default is 0 (SQL compliant syntax and result sets)
-    #
-    # compat_sphinxql_magics = 1
 }
 # --eof--
